Include legacy support in new generated server (for prototype UI)
