# swagger_server/models/__init__.py
@@ -7,6 +7,8 @@ from swagger_server.models.com import Com
 from swagger_server.models.edge import Edge
 from swagger_server.models.edge_type import EdgeType
 from swagger_server.models.graph import Graph
+from swagger_server.models.legacy_model import LegacyModel
 from swagger_server.models.model import Model
 from swagger_server.models.model_driver import ModelDriver
 from swagger_server.models.node import Node
+from swagger_server.models.simulation import Simulation
