# swagger_server/models/legacy_model.py
@@ -1,0 +1,94 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class LegacyModel(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, name: str=None, path: str=None):  # noqa: E501
+        """LegacyModel - a model defined in Swagger
+
+        :param name: The name of this LegacyModel.  # noqa: E501
+        :type name: str
+        :param path: The path of this LegacyModel.  # noqa: E501
+        :type path: str
+        """
+        self.swagger_types = {
+            'name': str,
+            'path': str
+        }
+
+        self.attribute_map = {
+            'name': 'name',
+            'path': 'path'
+        }
+
+        self._name = name
+        self._path = path
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'LegacyModel':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The LegacyModel of this LegacyModel.  # noqa: E501
+        :rtype: LegacyModel
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def name(self) -> str:
+        """Gets the name of this LegacyModel.
+
+        The short name / identifier of this model  # noqa: E501
+
+        :return: The name of this LegacyModel.
+        :rtype: str
+        """
+        return self._name
+
+    @name.setter
+    def name(self, name: str):
+        """Sets the name of this LegacyModel.
+
+        The short name / identifier of this model  # noqa: E501
+
+        :param name: The name of this LegacyModel.
+        :type name: str
+        """
+
+        self._name = name
+
+    @property
+    def path(self) -> str:
+        """Gets the path of this LegacyModel.
+
+        Path to the YAML file on disk representing this model  # noqa: E501
+
+        :return: The path of this LegacyModel.
+        :rtype: str
+        """
+        return self._path
+
+    @path.setter
+    def path(self, path: str):
+        """Sets the path of this LegacyModel.
+
+        Path to the YAML file on disk representing this model  # noqa: E501
+
+        :param path: The path of this LegacyModel.
+        :type path: str
+        """
+
+        self._path = path
